@@ -86,8 +86,8 @@ public:
 	// Public Methods
 	/////////////////////////
 
-	inline std::list<ItemInst*>::const_iterator begin() { return m_list.begin(); }
-	inline std::list<ItemInst*>::const_iterator end() { return m_list.end(); }
+	inline std::list<ItemInst*>::const_iterator cbegin() { return m_list.cbegin(); }
+	inline std::list<ItemInst*>::const_iterator cend() { return m_list.cend(); }
 
 	inline int size() { return static_cast<int>(m_list.size()); } // TODO: change to size_t
 	inline bool empty() { return m_list.empty(); }
@@ -140,8 +140,8 @@ public:
 	ItemInst* GetItem(int16 slot_id) const;
 	ItemInst* GetItem(int16 slot_id, uint8 bagidx) const;
 
-	inline std::list<ItemInst*>::const_iterator cursor_begin() { return m_cursor.begin(); }
-	inline std::list<ItemInst*>::const_iterator cursor_end() { return m_cursor.end(); }
+	inline std::list<ItemInst*>::const_iterator cursor_cbegin() { return m_cursor.cbegin(); }
+	inline std::list<ItemInst*>::const_iterator cursor_cend() { return m_cursor.cend(); }
 
 	inline int CursorSize() { return m_cursor.size(); }
 	inline bool CursorEmpty() { return m_cursor.empty(); }
@@ -425,8 +425,8 @@ protected:
 	//////////////////////////
 	// Protected Members
 	//////////////////////////
-	iter_contents _begin()		{ return m_contents.begin(); }
-	iter_contents _end()		{ return m_contents.end(); }
+	iter_contents _cbegin()		{ return m_contents.cbegin(); }
+	iter_contents _cend()		{ return m_contents.cend(); }
 
 	friend class Inventory;
 
