@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 02/06/2015 ==
+Uleat: Updated returns for Inventory and ItemInst const iterators. (const == const)
+
 == 02/03/2015 ==
 Trevius: Crashfix for TempName() when numbers are passed at the end of the name.
 Uleat: Tweaking of item type exclusions to alleviate strobing conditions with light sources
